--- a/eaton.frontend/src/global/css/base/elements/_lists.scss
+++ b/eaton.frontend/src/global/css/base/elements/_lists.scss
@@ -5,10 +5,12 @@
 .b-list {
 
   &__item {
-    padding: 1em;
+    display: inline-block;
+    padding-bottom: 2rem;
   }
 
   &--no-bullets {
     list-style-type: none;
+    padding-left: 0; //removing the bullets space
   }
 }
