--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -16,6 +16,7 @@ body {
 
 // Headings
 //----------------
+// sizes based on root font size (10px) 10px = 1rem
 
 h1,
 h2,
@@ -35,13 +36,11 @@ h5,
 
 h1,
 .heading-h1 {
-  font-size: 2rem;
   margin-top: 0;
 }
 
 h2,
 .heading-h2 {
-  font-size: 1.8rem;
   margin-top: 0;
 }
 
@@ -58,6 +57,11 @@ h4,
 h5,
 .heading-h5 {
   margin-top: 0;
+
+  &__link {
+    font-size: 2.4rem;
+    font-weight: bold;
+  }
 }
 
 
@@ -91,8 +95,9 @@ h5,
 }
 
 .body-copy {
-  font-size: 1.5em;
-  line-height: 2.375em;
+  background: inherit;
+  font-size: 2.5rem;
+  line-height: 3.8rem;
 }
 
 .body-copy-small {
