--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -1,9 +1,18 @@
-.eaton-featured-topic { background: #F8F8F8; padding: 120px 30px; }
+.eaton-featured-topic { padding-top: 120px; padding-bottom: 120px; }
+
+.eaton-featured-topic h2 { font-size: 3.6rem; }
+
+.eaton-featured-topic h4 { font-size: 3rem; }
 
 .eaton-featured-topic__title { margin-bottom: 30px; }
 
 .eaton-featured-topic__paragraph { margin-bottom: 60px; }
 
-.eaton-link-list__title { margin-bottom: 30px; }
+.eaton-featured-topic__button-container { margin-top: 60px; }
 
-.eaton-link-list--no-list-style { list-style: none; padding: 0; }
+.eaton-featured-topic__list-title { font-weight: bold; margin-bottom: 30px; }
+
+@media screen and (max-width: 767px) { .eaton-featured-topic__list-title { margin-top: 30px; } }
+
+@media screen and (min-width: 992px) { .eaton-featured-topic__list-left:after { background: #F8F8F8; content: ''; height: 85%; position: absolute; right: 0; top: 5px; width: 2px; }
+  .eaton-featured-topic__list-right { padding-left: 9%; } }
