--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
@@ -3,15 +3,46 @@
 
 
 
-<div class="eaton-product-overview">
- 
 
-<h2> product - overview </h2>
-<h3>${data.title}</h3>
+
+
+
+
+<div class="eaton-page-overview">
+
+<div class="eaton-page-overview__header col-xs-12 col-sm-6">
+<h1>${data.title}</h1>
+<div class="eaton-page-overview__header__dash"></div>
+
+
+<div class="hidden-xs">
+    <a href="#"  class="eaton-cta-button">Learn About our History</a>
+</div>
+
 
 </div>
 
 
+
+
+<div class="eaton-page-overview__content col-xs-12 col-sm-6">
+
+<sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/content/text'}"></sly>
+
+
+
+
+
+</div>
+
+
+<div class="col-xs-12 visible-xs  text-center">
+    <a href="#"  class="eaton-cta-button">Learn About our History</a>
+</div>
+
+
+
+</div>
 
 
 </sly>
