[M-11]  page overview sass updates and html update

--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-product-overview.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-product-overview.scss
@@ -57,7 +57,8 @@ $size-xl: 120px;
   display: inline-block;
   max-width: 600px;
   text-align: center;
-  margin: $size-md 0 0 0;
+  margin: $size-md 0 0;
+  text-decoration: none;
 
   &:hover {
     background-color: $color__primary-blue;
