--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
@@ -15,7 +15,7 @@
 <div class="eaton-page-overview__header__dash"></div>
 
 
-<div class="hidden-xs">
+<div class="hidden-xs text-center">
     <a href="#"  class="eaton-cta-button">Learn About our History</a>
 </div>
 
