Header: Style the utility navigation- desktop (icons missing)

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -8,6 +8,9 @@
 
   &__country {
     text-transform: uppercase;
+    font-weight: bold;
+    margin-right: 5px;
+    font-family: Arial, sans-serif;
   }
 
   &__sign-in {
