--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -4,15 +4,17 @@ h1, h2, h3, .heading-h1, .heading-h2, .heading-h3 { font-family: "Eaton", Arial,
 
 h4, h5, .heading-h5, .heading-h6 { font-family: "Arial", sans-serif; }
 
-h1, .heading-h1 { font-size: 2rem; margin-top: 0; }
+h1, .heading-h1 { margin-top: 0; }
 
-h2, .heading-h2 { font-size: 1.8rem; margin-top: 0; }
+h2, .heading-h2 { margin-top: 0; }
 
 h3, .heading-h3 { margin-top: 0; }
 
 h4, .heading-h4 { margin-top: 0; }
 
 h5, .heading-h5 { margin-top: 0; }
+
+h5__link, .heading-h5__link { font-size: 2.4rem; font-weight: bold; }
 
 .body-link { color: #005EB8; }
 
@@ -22,7 +24,7 @@ h5, .heading-h5 { margin-top: 0; }
 
 .dark-theme .body-link:hover, .dark-theme .body-link:focus, .dark-theme .body-link:active { color: #FFF; }
 
-.body-copy { font-size: 1.5em; line-height: 2.375em; }
+.body-copy { background: inherit; font-size: 2.5rem; line-height: 3.8rem; }
 
 .body-copy-small { color: #333F48; font-family: "Arial", sans-serif; font-size: 26px; line-height: 34px; }
 
@@ -85,10 +87,22 @@ h5, .heading-h5 { margin-top: 0; }
 
 .u-visible { visibility: visible; }
 
-.b-button { paddin: 1em; }
+.b-button { background: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
 
 .b-button--with-icon .icon { margin-left: 1rem; }
 
-.b-list__item { padding: 1em; }
+.b-button--primary { border-width: 3px; font-size: 2.8em; padding: 40px; }
 
-.b-list--no-bullets { list-style-type: none; }
+.b-button--secondary { border-width: 3px; font-size: 1.4em; padding: 20px; }
+
+.b-button--light { border-color: #005EB8; color: #005EB8; }
+
+.b-button--light:hover, .b-button--light:active, .b-button--light:focus { color: #FFF; background: #005EB8; border-color: #005EB8; text-decoration: none; }
+
+.b-button--dark { border-color: #FFF; color: #FFF; }
+
+.b-button--dark:hover, .b-button--dark:active, .b-button--dark:focus { color: #005EB8; background: #FFF; border-color: #FFF; text-decoration: none; }
+
+.b-list__item { display: inline-block; padding-bottom: 2rem; }
+
+.b-list--no-bullets { list-style-type: none; padding-left: 0; }
