--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -17,6 +17,8 @@
   .eaton-link-list-horizontal__list-item::after { content: ''; background-color: #5B6770; height: 1em; position: absolute; right: 0; top: 50%; transform: translateY(-50%); width: 1px; }
   .eaton-link-list-horizontal__list-item:last-child::after { display: none; } }
 
+.eaton-link-list-primary-nav__items a { text-decoration: none; }
+
 @media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 100px; bottom: 42px; width: 100%; left: 0; height: 0; visibility: hidden; overflow: hidden; background: #5B6770; color: #FFF; transition: height 0.7s ease-in-out; }
   .eaton-link-list-primary-nav__headline { display: block; padding: 60px 30px; font-size: 40px; line-height: 50px; background: #333F48; margin-bottom: 0; }
   .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 30px; }
@@ -24,6 +26,8 @@
   .eaton-link-list-primary-nav__items a:first-child { margin-top: 0; }
   .eaton-link-list-primary-nav--has-background .eaton-link-list-primary-nav__items { background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; } }
 
-@media screen and (min-width: 992px) { .eaton-link-list-primary-nav { position: relative; text-align: right; }
+@media screen and (min-width: 992px) { .eaton-link-list-primary-nav { position: relative; height: 100%; }
   .eaton-link-list-primary-nav__headline { display: none; }
+  .eaton-link-list-primary-nav__items { display: flex; height: 100%; align-items: center; justify-content: flex-end; }
+  .eaton-link-list-primary-nav__items a { margin: 0px 15px; padding-right: 5px; padding-left: 5px; color: #333F48; }
   .eaton-link-list-primary-nav--has-background .eaton-link-list-primary-nav__items { background: none !important; } }
