--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -75,7 +75,7 @@
 
     &__items {
     display: flex;
-    height: 100%;
+    height: 60px;
     align-items: center;
     justify-content: flex-end;
       a {
@@ -83,6 +83,12 @@
         padding-right: 5px;
         padding-left: 5px;
         color: $color__primary-gray1;
+        display: flex;
+        height: 100%;
+        align-items: center;
+      }
+      .eaton-header--fixed & {
+        height: 40px;
       }
     }
 
