--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
@@ -1,66 +1,53 @@
-.featured-story-component__content {
-  padding: 60px 50px;
-}
+.featured-story-component {
 
-.featured-story-component__text {
-  color: #fff;
-  font-size: 2.5em;
-  line-height: 1.250em;
-  padding-top: 30px;
-}
-
-.imgContainer > img.show-desktop {
-  height: 470px;
-}
-
-.featured-story-component--right {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  background: #0266C6;
-  color: #fff;
-  opacity: 0.8;
-  padding: 0;
-}
-
-.featured-story-component--left {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background: #0266C6;
-  color: #fff;
-  opacity: 0.8;
-  padding: 0;
-  margin-left: 0px !important;
-}
-
-.show-mobile {
-  display: none;
-}
-
-
-/* @media only screen and (max-width: 769px) { */
-@media only screen and (max-width: 600px), screen and (max-width: 992px) {
-  .featured-story-component--right {
-    position: relative;
-  }
-  .featured-story-component--left {
-    position: relative;
-  }
-  .img-responsive {
-    width: 100%;
-  }
-  .featured-story-component__row {
-    padding-bottom: 20px;
-  }
-  .show-desktop {
-    display: none;
+  &__content {
+    padding: 60px 50px;
   }
 
-  .show-mobile {
-    display: block;
+  &__text {
+    color: $color__white;
+    font-size: 2.45em;
+    font-family: $font-family__primary;
+    line-height: 1.250em;
+    padding-top: 30px;
+  }
+
+  &__title {
+    font-size: 2.55em;
+  }
+
+  &__blue {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-color: $color__primary-blue;
+    color: $color__white;
+    opacity: 0.8;
+    padding: 0;
+
+    &--right {
+      right: 0;
+    }
+
+    &--left {
+      left: 0;
+    }
+  }
+}
+
+/* @media only screen and (max-width: 769px)  */
+@include media-mobile-and-tablet {
+
+  .featured-story-component {
+
+    &__blue {
+      position: relative;
+    }
+
+    &__row {
+      padding-bottom: 20px;
+    }
   }
 
 }
+
