--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -1,7 +1,7 @@
 <div data-sly-use.data="../data/view-landing-hero-multiple-data.js" class="carousel-component carousel slide" data-ride="carousel" data-pause="hover">
     <!-- Indicators -->
     <ol class="carousel-indicators" data-sly-list.slide="${data}">
-        <li data-target=".carousel-component" data-slide-to="${slideList.index}" class="carousel-indicators__item ${slideList.index == 0 ? 'active' : ''}"></li>
+        <li data-target=".carousel-component" data-slide-to="${slideList.index}" class="carousel-component__dots ${slideList.index == 0 ? 'active' : ''}"></li>
     </ol>
     <div class="carousel-component__down-arrow visible-xs">
         <span class="glyphicon glyphicon-menu-down"></span>
@@ -10,8 +10,8 @@
     <!-- Wrapper for slides -->
     <div class="carousel-component-slide carousel-inner" data-sly-list.slide="${data}" role="listbox">
         <div class="item ${slideList.index == 0 ? 'active' : ''}">
-            <img class="carousel-component-slide__image--desktop img-responsive" src="${slide.image}" alt="...">
-            <img class="carousel-component-slide__image--mobile" src="${slide.mobile_image}" alt="...">
+            <img class="img-responsive hidden-xs" src="${slide.image}" alt="${data.alt}">
+            <img class="img-responsive visible-xs" src="${slide.mobile_image}" alt="${data.alt}">
             <div class="carousel-component-slide__caption carousel-caption">
                 <h1 class="carousel-component-slide__title">${slide.title}</h1>
                 <p class="carousel-component-slide__text">${slide.text}</p>
