Styles:Primary Nav Links (Bootstrap Icons)

--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -13,7 +13,7 @@
   &__content {
     padding: 20px;
     margin-bottom: 20px;
-    display: none;
+    color: $color__white;
 
     &--active {
       display: block;
