--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -12,5 +12,50 @@ $primary-nav-border: #eef0f2;
 
   .row {
     display: flex;
+    align-items: center;
+  }
+
+  &__links {
+    i {
+      font-size: 25px;
+    }
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+  }
+
+  //-----------------------------------
+  // Mobile Breakpoint
+  //-----------------------------------
+  @include media-mobile-and-tablet {
+    &__links {
+      text-align: right;
+    }
+
+    &__open-search {
+      display: inline-block;
+      margin-right: 30px;
+    }
+  }
+
+  //-----------------------------------
+  // Desktop Breakpoint
+  //-----------------------------------
+  @include media-desktop-and-up {
+    &__open-search {
+      display: flex;
+      justify-content: flex-end;
+      height: 60px;
+      align-items: center;
+
+      .eaton-header--fixed & {
+        height: 40px;
+      }
+    }
+
+    &__open-mobile-menu {
+      display: none;
+    }
   }
 }
