--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,6 +1,6 @@
 .mega-menu { background: #333F48; padding: 30px 0; display: none; }
 
-.mega-menu__content { padding: 20px; margin-bottom: 20px; display: none; }
+.mega-menu__content { padding: 20px; margin-bottom: 20px; color: #FFF; }
 
 .mega-menu__content--active { display: block; }
 
