--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -9,7 +9,7 @@
 @media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 1; width: 100%; right: 0; opacity: 0; visibility: hidden; transition: opacity 0.5s ease-in-out; }
   .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
 
-.header-primary-nav { background: #FFF; padding: 20px 0 16px; border-bottom: 4px solid #eef0f2; transition: height 0.3s ease-in-out; }
+.header-primary-nav { background: #FFF; border-bottom: 4px solid #EEF0F2; transition: height 0.3s ease-in-out; }
 
 .header-primary-nav .row { display: flex; align-items: center; }
 
@@ -23,6 +23,8 @@
 @media screen and (min-width: 992px) { .header-primary-nav__open-search { display: flex; justify-content: flex-end; height: 60px; align-items: center; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 40px; }
   .header-primary-nav__open-mobile-menu { display: none; } }
+
+.eaton-header .eaton-logo { padding: 20px 0 16px; }
 
 @media screen and (min-width: 992px) { .eaton-header--fixed { position: fixed; width: 100%; }
   .eaton-header--fixed .full-page-drawer, .eaton-header--fixed .header-utility-nav { display: none; }
