--- a/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
@@ -1,11 +1,44 @@
-//-----------------------------------
-// Component M-0: Title Text Image Link
-//-----------------------------------
+.category-hightlight-header__text {
+  font-size: 1.5em;
+  color: #FFF;
+}
 
-// Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
-@import "../../../global/css/_config/sass";
+.category-hightlight-header__title {
+  font-size: 3.5em;
+  line-height: 1.192em;
+  color: #FFF;
+}
 
+.category-hightlight-header__image {
+  /*background-image: url(/content/dam/eaton/images/story_board.png);*/
+  background-size: cover;
+  height: 450px;
+}
 
-.eaton-ttil {
-  margin: 0;
+.category-hightlight-header--vertical-align {
+  display: flex;
+  align-items: center;
+}
+
+@media only screen and (max-width: 767px) {
+  .category-hightlight-header__image {
+    height: 400px;
+    /*background-image: url(/content/dam/eaton/images/story_boardphone2.png);*/
+  }
+  .category-hightlight-header__title {
+    font-size: 2.5em;
+  }
+  .category-hightlight-header__text {
+    font-size: 1.3em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .category-hightlight-header-header__image {
+    height: 300px;
+    /*background-image: url(/content/dam/eaton/images/story_boardtablet.png);*/
+  }
+  .category-hightlight-header__title {
+    font-size: 3em;
+  }
 }
