--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -15,15 +15,16 @@
 
 .header-primary-nav__links a:hover, .header-primary-nav__links a:focus { text-decoration: none; }
 
-.header-primary-nav__links i { font-size: 25px; }
+.header-primary-nav__links i { font-size: 20px; }
 
 @media screen and (max-width: 991px) { .header-primary-nav__links { justify-content: flex-end; display: flex; flex-grow: 1; align-items: center; }
   .header-primary-nav__open-search, .header-primary-nav__open-mobile-menu { display: inline-block; padding: 30px; } }
 
-@media screen and (min-width: 992px) { .header-primary-nav__menu { flex-grow: 1; margin-right: 15px; }
+@media screen and (min-width: 992px) { .header-primary-nav__menu { flex-grow: 1; position: relative; }
+  .header-primary-nav__menu:after { content: ''; height: 30px; width: 1px; background: #98A4AE; position: absolute; top: 36px; right: 0; }
+  .eaton-header--fixed .header-primary-nav__menu { top: 26px; right: 7px; }
   .header-primary-nav__open-search { display: flex; justify-content: flex-end; height: 90px; padding: 30px; display: flex; margin-top: 10px; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 70px; padding: 20px; }
-  .eaton-header--fixed .header-primary-nav__open-search i { font-size: 20px; }
   .header-primary-nav__open-mobile-menu { display: none; } }
 
 @media screen and (max-width: 991px) { .eaton-header .eaton-logo { margin: 20px 30px; } }
