--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -7,14 +7,29 @@
 
 .eaton-social-links {
 
+  &__eyebrow {
+    margin-bottom: 18px;
+  }
+
   &__list {
+    font-size: 0; // Remove spacing between elements when using "display: inline-block"
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 16px 0;
     padding: 0;
   }
 
   &__list-item {
     display: inline-block;
+    margin-right: 18px;
+  }
+
+  &__page-link {
+    color: $color__white;
+    font-size: 18px;
+  }
+
+  &__page-link-icon {
+    font-size: 0.7em;
   }
 
 }
