[m7] Footer. Fix Lint Errors

--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -14,7 +14,7 @@
   &__list {
     font-size: 0; // Remove spacing between elements when using "display: inline-block"
     list-style-type: none;
-    margin: 0 0 16px 0;
+    margin: 0 0 16px;
     padding: 0;
   }
 
