--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/social-links/css/social-links.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/social-links/css/social-links.css
@@ -1,6 +1,6 @@
 .eaton-social-links__eyebrow { margin-bottom: 18px; }
 
-.eaton-social-links__list { font-size: 0; list-style-type: none; margin: 0 0 16px 0; padding: 0; }
+.eaton-social-links__list { font-size: 0; list-style-type: none; margin: 0 0 16px; padding: 0; }
 
 .eaton-social-links__list-item { display: inline-block; margin-right: 18px; }
 
