[m7] Footer. Fix Hover State Social Link

--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -24,8 +24,14 @@
   }
 
   &__page-link {
-    color: $color__white;
+
     font-size: 18px;
+
+    &,
+    &:hover,
+    &:active {
+      color: $color__white;
+    }
   }
 
   &__page-link-icon {
