M29 Category Highlight: Small fix on data js

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-l2-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-l2-hero.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="../data/view-l2-hero-data.js">
     <div class="eaton-title-text-image container-fluid category-hightlight-header__image category-hightlight-header--vertical-align"
-        style="background-image: url(/content/dam/eaton/images/story_board.png)">
+        style="background-image:url('${data.headerImage @ context='uri'}')">
         <div class="row text-center center-block">
             <div class="col-xs-12">
                 <h1 class="category-hightlight-header__title">${data.headerTitle}</h1>
