--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
@@ -35,7 +35,7 @@
   }
 }
 
-/* @media only screen and (max-width: 769px)  */
+// @media only screen and (max-width: 769px)
 @include media-mobile-and-tablet {
 
   .featured-story-component {
