--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -4,4 +4,4 @@
 
 .mega-menu__content--active { display: block; }
 
-@media screen and (max-width: 991px) { .mega-menu { position: fixed; width: 100%; top: 105px; bottom: 42px; transition: transform 0.7s ease-in-out; overflow: auto; transform: translate(100%); visibility: hidden; } }
+@media screen and (max-width: 991px) { .mega-menu { position: fixed; width: 100%; top: 105px; bottom: 42px; -webkit-transition: -webkit-transform 0.7s ease-in-out; transition: -webkit-transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out; overflow: auto; -webkit-transform: translate(100%); transform: translate(100%); visibility: hidden; } }
