--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -8,7 +8,10 @@
 .mega-menu {
   background: $color__primary-gray1;
   padding: 30px 0;
-  display: none;
+  // display: none;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
 
   &__content {
     padding: 20px;
@@ -25,7 +28,6 @@
   //-----------------------------------
   @include media-mobile-and-tablet {
     position: fixed;
-    width: 100%;
     top: 105px;
     bottom: 42px;
     transition: transform 0.7s ease-in-out;
