--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -22,15 +22,17 @@
 
 @media screen and (min-width: 992px) { .header-primary-nav__menu { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; position: relative; }
   .header-primary-nav__menu::after { content: ''; height: 30px; width: 1px; background: #98A4AE; position: absolute; top: 36px; right: 0; }
-  .eaton-header--fixed .header-primary-nav__menu { top: 26px; right: 7px; }
+  .eaton-header--fixed .header-primary-nav__menu::after { top: 26px; right: 7px; }
   .header-primary-nav__open-search { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; height: 90px; padding: 30px; margin-top: 10px; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 70px; padding: 20px; }
   .header-primary-nav__open-mobile-menu { display: none; } }
 
+.eaton-header { position: relative; }
+
 @media screen and (max-width: 991px) { .eaton-header .eaton-logo { margin: 20px 30px; } }
 
 @media screen and (min-width: 992px) { .eaton-header .eaton-logo { margin: 20px 15px 16px; }
-  .eaton-header--fixed { position: fixed; width: 100%; }
+  .eaton-header--fixed { position: fixed; width: 100%; z-index: 20; }
   .eaton-header--fixed .full-page-drawer, .eaton-header--fixed .header-utility-nav { display: none; }
   .eaton-header--fixed .eaton-logo__link { width: 126px; height: 40px; -webkit-transition: height 0.3s ease-in-out, width 0.3s ease-in-out; transition: height 0.3s ease-in-out, width 0.3s ease-in-out; } }
 
