--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,7 +1,7 @@
-.mega-menu { background: #333F48; padding: 30px 0; display: none; }
+.mega-menu { background: #333F48; padding: 30px 0; position: absolute; width: 100%; z-index: 2; }
 
 .mega-menu__content { padding: 20px; margin-bottom: 20px; color: #FFF; }
 
 .mega-menu__content--active { display: block; }
 
-@media screen and (max-width: 991px) { .mega-menu { position: fixed; width: 100%; top: 105px; bottom: 42px; -webkit-transition: -webkit-transform 0.7s ease-in-out; transition: -webkit-transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out; overflow: auto; -webkit-transform: translate(100%); transform: translate(100%); visibility: hidden; } }
+@media screen and (max-width: 991px) { .mega-menu { position: fixed; top: 105px; bottom: 42px; -webkit-transition: -webkit-transform 0.7s ease-in-out; transition: -webkit-transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out; overflow: auto; -webkit-transform: translate(100%); transform: translate(100%); visibility: hidden; } }
